--- a/Web/BrickBreaker/game.html
+++ b/Web/BrickBreaker/game.html
@@ -10,14 +10,20 @@
 </head>
 <center>
 <body onmousemove="mousePosition(event)" onload="setup()">
-    <p>
+    <div class="links">
+        <a class="tab-links" href="index.html">Go Home</a>
+        <a class="tab-links" href="instructions.html">Go To Instructions</a>
+        <br>
+    </div>
+
+    <div class="game-buttons">
         <button onclick="startGame()">Start Game</button>
         <button onclick="resetGame()">Reset Game</button>
-    </p>
+    </div>
 
     <svg id="container" width="600" height="600">
-        <circle id="ball" cx="20" cy="20" r="20" fill="orange"/>
-        <rect id="paddle" x="325" y="550" height="20" width="150" fill="blue"/>
+        <circle id="ball" cx="20" cy="20" r="20" fill="#a1de93"/>
+        <rect id="paddle" x="325" y="550" height="20" width="150" fill="#83c6dd"/>
 
         <rect id="r0"/>
         <rect id="r1"/>
