--- a/Web/BrickBreaker/game.html
+++ b/Web/BrickBreaker/game.html
@@ -21,9 +21,12 @@
         <button onclick="resetGame()">Reset Game</button>
     </div>
 
+
+
     <svg id="container" width="600" height="600">
-        <circle id="ball" cx="20" cy="20" r="20" fill="#a1de93"/>
+        <circle id="ball" cx="20" cy="20" r="6" fill="#a1de93"/>
         <rect id="paddle" x="325" y="550" height="20" width="150" fill="#83c6dd"/>
+        
 
         <rect id="r0"/>
         <rect id="r1"/>
@@ -45,7 +48,14 @@
         <rect id="r17"/>
         <rect id="r18"/>
         <rect id="r19"/>
+
     </svg>
+
+    <div class="gmame-counter">
+        <p id="games-won">You have won 0 games!</p>
+        <p id="games-lost">You have lost 0 games :(</p>
+    </div>
+    
 </body>
 </center>
 </html>
