Started instrucutions and finished play more games extra

--- a/Web/BrickBreaker/instructions.html
+++ b/Web/BrickBreaker/instructions.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="utf-8">
 
-    <!-- <script type="text/javascript" src="script.js"></script> -->
     <link rel="stylesheet" href="style.css">
 
     <title>Instuctions</title>
 </head>
-<body>
-    <h1>Welcome to the Home Page of this Brick Breaker Game.</h1>
+<center>
+<body id="instruct-page">
+    <div class="links">
+        <a class="tab-links" href="index.html">Go Home</a>
+        <a class="tab-links" href="game.html">Go To Game</a>
+    </div>
+
+    <h1>Welcome to the instuctions.</h1>
+
+    <p>This game only has one win condition and one lose condition.</p>
+    <p>The win condition "breaking" all the bricks with the ball.</p>
+    <p>The lose condition is letting the ball hit the bottom wall.</p>
+    <br>
+    <p>When the ball is not moving, the game has either not begun or not reset.</p>
+    <p>You can look below the game to find how many 
+        games you have either won or lost.</p>
+    <p>After a game, you can press the "reset/play another game" button to reset
+        after a game or restart in the middle of a game.</p>
    
 
 </body>
+</center>
 </html>
