--- a/Web/BrickBreaker/game.html
+++ b/Web/BrickBreaker/game.html
@@ -13,18 +13,17 @@
     <div class="links">
         <a class="tab-links" href="index.html">Go Home</a>
         <a class="tab-links" href="instructions.html">Go To Instructions</a>
-        <br>
     </div>
 
     <div class="game-buttons">
         <button onclick="startGame()">Start Game</button>
-        <button onclick="resetGame()">Reset Game</button>
+        <button onclick="resetGame()">Reset Game / Play Another Game</button>
     </div>
 
 
 
     <svg id="container" width="600" height="600">
-        <circle id="ball" cx="20" cy="20" r="6" fill="#a1de93"/>
+        <circle id="ball" cx="20" cy="20" r="6" fill="#ff6961"/>
         <rect id="paddle" x="325" y="550" height="20" width="150" fill="#83c6dd"/>
         
 
@@ -52,8 +51,8 @@
     </svg>
 
     <div class="gmame-counter">
-        <p id="games-won">You have won 0 games!</p>
-        <p id="games-lost">You have lost 0 games :(</p>
+        <p id="games-won">You have won 0 game(s) :)</p>
+        <p id="games-lost">You have lost 0 game(s) :(</p>
     </div>
     
 </body>
