Tweaked paddle and background

--- a/Web/BrickBreaker/game.html
+++ b/Web/BrickBreaker/game.html
@@ -10,7 +10,7 @@
 </head>
 <center>
 <body onmousemove="mousePosition(event)" onload="setup()">
-    <div class="links">
+    <div class="links-tab">
         <a class="tab-links" href="index.html">Go Home</a>
         <a class="tab-links" href="instructions.html">Go To Instructions</a>
     </div>
