--- a/Web/BrickBreaker/instructions.html
+++ b/Web/BrickBreaker/instructions.html
@@ -9,12 +9,12 @@
 </head>
 <center>
 <body id="instruct-page">
-    <div class="links">
+    <div class="links-tab">
         <a class="tab-links" href="index.html">Go Home</a>
         <a class="tab-links" href="game.html">Go To Game</a>
     </div>
 
-    <h1>Welcome to the instuctions.</h1>
+    <h1>Welcome to the Instructions.</h1>
 
     <p>This game only has one win condition and one lose condition.</p>
     <p>The win condition "breaking" all the bricks with the ball.</p>
@@ -25,6 +25,8 @@
         games you have either won or lost.</p>
     <p>After a game, you can press the "reset/play another game" button to reset
         after a game or restart in the middle of a game.</p>
+    <p>The ball will randomly go either to the left or to the right at the
+        start of each round.</p>
    
 
 </body>
