--- a/Web/BrickBreaker/index.html
+++ b/Web/BrickBreaker/index.html
@@ -11,15 +11,15 @@
 <center>
 <body>
     <h1>A Pastel Brick Breaker</h1>
-    <a href="game.html">Press Here to Play the Game</a>
+    <a class="tab-links" href="game.html">Press Here to Play the Game</a>
     <br><br>
-    <a href="instructions.html">Press Here to Read the Instructions</a>
+    <a class="tab-links" href="instructions.html">Press Here to Read the Instructions</a>
 
     <br><br><br>
 
     <h2>Credits to whom it may concern</h2>
     <ul>
-        <li>The gradiants:<a class="credit-links" href="https://cssgradient.io" target="blank">link</a></li>
+        <li>The gradients:<a class="credit-links" href="https://cssgradient.io" target="blank">link</a></li>
         <li>The background:<a class="credit-links" href="https://cssgradient.io/gradient-backgrounds/" target="blank">link</a></li>
         <li>The random pastels:<a class="credit-links" href="https://stackoverflow.com/questions/43193341/how-to-generate-random-pastel-or-brighter-color-in-javascript" target="blank">link</a></li>
     </ul>
