--- a/Web/BrickBreaker/instructions.html
+++ b/Web/BrickBreaker/instructions.html
@@ -8,7 +8,8 @@
     <title>Instuctions</title>
 </head>
 <center>
-<body id="instruct-page">
+<body class="instruct-page">
+
     <div class="links-tab">
         <a class="tab-links" href="index.html">Go Home</a>
         <a class="tab-links" href="game.html">Go To Game</a>
@@ -19,7 +20,9 @@
     <p>This game only has one win condition and one lose condition.</p>
     <p>The win condition "breaking" all the bricks with the ball.</p>
     <p>The lose condition is letting the ball hit the bottom wall.</p>
+
     <br>
+
     <p>When the ball is not moving, the game has either not begun or not reset.</p>
     <p>You can look below the game to find how many 
         games you have either won or lost.</p>
@@ -27,6 +30,12 @@
         after a game or restart in the middle of a game.</p>
     <p>The ball will randomly go either to the left or to the right at the
         start of each round.</p>
+    <p>You can adjust the speed of the game with slider at the bottom.</p>
+    <p>The speed can be changed at any time but will only adjust between rounds.</p>
+
+    <br>
+
+    <h4>Below is a screenshot mid game.</h4>
    
 
 </body>
