--- a/Web/BrickBreaker/index.html
+++ b/Web/BrickBreaker/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
 
-    <!-- <script type="text/javascript" src="script.js"></script> -->
     <link rel="stylesheet" href="style.css">
 
     <title>Home</title>
@@ -15,13 +14,20 @@
     <br><br>
     <a class="tab-links" href="instructions.html">Press Here to Read the Instructions</a>
 
-    <br><br><br>
+    <br><br>
+
+    <h2>About Me and Project</h2>
+    <p>I am a student at BB&N and this is the final project of the trimester for the Advanced Topics class.</p>
+    <p>This project was to test the web programming information we learned.</p>
+    <p>One of my sweathshirts was the inspiration for the colors and design of this website.</p>
+
 
     <h2>Credits to whom it may concern</h2>
     <ul>
         <li>The gradients:<a class="credit-links" href="https://cssgradient.io" target="blank">link</a></li>
         <li>The background:<a class="credit-links" href="https://cssgradient.io/gradient-backgrounds/" target="blank">link</a></li>
         <li>The random pastels:<a class="credit-links" href="https://stackoverflow.com/questions/43193341/how-to-generate-random-pastel-or-brighter-color-in-javascript" target="blank">link</a></li>
+        <li>The range slider:<a class="credit-links" href="https://www.w3schools.com/howto/howto_js_rangeslider.asp" target="blank">link</a></li>
     </ul>
 
 </body>
