--- a/Web/BrickBreaker/instructions.html
+++ b/Web/BrickBreaker/instructions.html
@@ -32,10 +32,13 @@
         start of each round.</p>
     <p>You can adjust the speed of the game with slider at the bottom.</p>
     <p>The speed can be changed at any time but will only adjust between rounds.</p>
+    <p>You can have more control over which direction the ball goes in by hitting the ball with
+        the side or corner of the paddle.</p>
 
     <br>
 
-    <h4>Below is a screenshot mid game.</h4>
+    <h4>Below is a screenshot after losing the game.</h4>
+    <img class="screenshot" src="Images/screenshot_after_losing.png" alt="Screenshot after losing game.">
    
 
 </body>
