--- a/Web/BrickBreaker/index.html
+++ b/Web/BrickBreaker/index.html
@@ -19,7 +19,7 @@
     <h2>About Me and Project</h2>
     <p>I am a student at BB&N and this is the final project of the trimester for the Advanced Topics class.</p>
     <p>This project was to test the web programming information we learned.</p>
-    <p>One of my sweathshirts was the inspiration for the colors and design of this website.</p>
+    <p>One of my sweatshirts was the inspiration for the colors and design of this website.</p>
 
 
     <h2>Credits to whom it may concern</h2>
