Finished Brick Breaker

--- a/Web/BrickBreaker/index.html
+++ b/Web/BrickBreaker/index.html
@@ -7,6 +7,7 @@
 
     <title>Home</title>
 </head>
+
 <center>
 <body>
     <h1>A Pastel Brick Breaker</h1>
@@ -16,19 +17,22 @@
 
     <br><br>
 
-    <h2>About Me and Project</h2>
-    <p>I am a student at BB&N and this is the final project of the trimester for the Advanced Topics class.</p>
-    <p>This project was to test the web programming information we learned.</p>
-    <p>One of my sweatshirts was the inspiration for the colors and design of this website.</p>
+    <h2>About Me and This Project</h2>
+    <div class="description">
+        <p>I am a student at BB&N and this is the final project of the second trimester for the Advanced Topics class.</p>
+        <p>This project was to test the web programming information we learned.</p>
+        <p>One of my sweatshirts was the inspiration for the colors and design of this website.</p>
+    </div>
 
-
-    <h2>Credits to whom it may concern</h2>
-    <ul>
-        <li>The gradients:<a class="credit-links" href="https://cssgradient.io" target="blank">link</a></li>
-        <li>The background:<a class="credit-links" href="https://cssgradient.io/gradient-backgrounds/" target="blank">link</a></li>
-        <li>The random pastels:<a class="credit-links" href="https://stackoverflow.com/questions/43193341/how-to-generate-random-pastel-or-brighter-color-in-javascript" target="blank">link</a></li>
-        <li>The range slider:<a class="credit-links" href="https://www.w3schools.com/howto/howto_js_rangeslider.asp" target="blank">link</a></li>
-    </ul>
+    <div class="credits-div">
+        <h2>Credits to whom it may concern</h2>
+        <ul class="credits-list">
+            <li>The gradients:<a class="credit-links" href="https://cssgradient.io" target="blank">link</a></li>
+            <li>The background:<a class="credit-links" href="https://cssgradient.io/gradient-backgrounds/" target="blank">link</a></li>
+            <li>The random pastels:<a class="credit-links" href="https://stackoverflow.com/questions/43193341/how-to-generate-random-pastel-or-brighter-color-in-javascript" target="blank">link</a></li>
+            <li>The range slider:<a class="credit-links" href="https://www.w3schools.com/howto/howto_js_rangeslider.asp" target="blank">link</a></li>
+        </ul>
+    </div>
 
 </body>
 </center>
