--- a/Web/BrickBreaker/instructions.html
+++ b/Web/BrickBreaker/instructions.html
@@ -7,6 +7,7 @@
 
     <title>Instuctions</title>
 </head>
+
 <center>
 <body class="instruct-page">
 
@@ -32,6 +33,8 @@
         start of each round.</p>
     <p>You can adjust the speed of the game with slider at the bottom.</p>
     <p>The speed can be changed at any time but will only adjust between rounds.</p>
+    <p>The lower the number, the faster the game moves as the number dictates how often the
+         game refreshes in milliseconds.</p>
     <p>You can have more control over which direction the ball goes in by hitting the ball with
         the side or corner of the paddle.</p>
 
